code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agents_terminal_overlay_full_details.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "&output"
---
 +--------------------------------------------------------------------------------------------+
 |                                         Magik Code                                         |
 |                              Not signed in: usage unavailable                              |
 +--------------------------------------------------------------------------------------------+
 + Agents - Ctrl+A to close-------------------------------------------------------------------+
 | Filter   1 All - 2 Running - 3 Failed - 4 Done - 5 Review               Sort: ( Recent ▼ ) |
 | +----------------------++----------------------------------------------------------------+ |
 | |Docs Sweep            || Docs Sweep / CLAUDE-3-Opus                                     | |
 | |› CLAUDE-3-Opus ✔     || Status: ✔ Completed   Model: CLAUDE-3-Opus   ID: #docs-sw      | |
 | |  GPT-4o ✖            ||Batch: Batch batchdoc                                           | |
 | |                      ||                                                                | |
 | |                      ||+ Highlights (h) ▼ --------------------------------------------+| |
 | |                      |||   • Final: ### Highlights - New Auto Drive controls - Faster  | |
 | |                      |||       release approvals                                       | |
 | |                      ||+---------------------------------------------------------------| |
 | |                      ||                                                                | |
 | |                      || Context                                                        | |
 | |                      ||   Focus on October 2025 product changes                        | |
 | |                      ||                                                                | |
 | |                      ||+ Action Log (a) ▼ - 5 entries --------------------------------+| |
 | |                      |||   STATUS                                                      | |
 | |                      |||   MM:SS  Status → Running                                     | |
 | |                      |||   PROGRESS                                                    | |
 | |                      |||   MM:SS  Collecting release notes                             | |
 | |                      |||          Reviewing eng updates                                | |
 | |                      |||   STATUS                                                      | |
 | +----------------------++----------------------------------------------------------------+ |
 | [↑/↓/←/→] Navigate   [1-5] Filter   [S] Sort   [H/A] Toggle Details   [X] Stop   [Ctrl+A]  |
 +--------------------------------------------------------------------------------------------+
