code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_action_transitions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Comparing diffs against last run.  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Ready: run cargo test --workspace  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > waiting for code review...  ✶ Awaiting review (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Queued new command for execution.  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
