code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_countdown_auto_submit.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Auto Drive queued cargo fmt --check  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Disabled  • Diagnostics Enabled                             API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Auto Drive queued cargo fmt --check  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Disabled  • Diagnostics Enabled                             API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


  Auto Drive > Running cargo fmt --check.  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Disabled  • Diagnostics Enabled                             API key
