code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_grouped_desired_layout.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                 Magik Code                                 |
 |                      Not signed in: usage unavailable                      |
 +----------------------------------------------------------------------------+






 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › Open docs and find login button

   +- Browser (headless): example.com
   |
   |   Actions
   |    MM:SS  Opened    https://example.com/docs
   |    MM:SS  Clicked   Sign in button
   |    MM:SS  Scrolled  dy=640
   |    MM:SS  Typed     docs search
   |
   |   Console: cdp warning: Refused to load script from cdn.example.com
   |
   +- [Ctrl+B] View · [Esc] Stop

 + ✶ Browsing... -------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
